# apple-silicon-accelerometer

./: README.md
sentrymac/: README.md  manifest.json  metadata.csv  pyproject.toml
sentrymac/assets/: dashboard.json  monitors.json
sentrymac/datadog_checks/sentrymac/: __init__.py  check.py  detector.py  spu_sensor.py
sentrymac/datadog_checks/sentrymac/data/: conf.yaml.example  metrics.yaml
sentrymac/tests/: test_sentrymac.py
